      supported: it no longer falls back to C++98.
      
      \item PCRE2 is used if available: this is strongly recommended as
      PCRE1 is no longer developed (it only receives bug fixes and has
      outdated Unicode tables).  \command{configure} will warn if PCRE2
      is not found and fall back to PCRE1.  \command{configure} options
      \option{--without-pcre1} and \option{--without-pcre1} can be used
      to exclude one or the other (but at least one of PCRE2 and PCRE1
      is required).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{formula(x)} with \code{length(x) > 1} character vectors,
      is deprecated now.  Such use has been rare, and has \sQuote{worked}
      as expected in some cases only.  In other cases, wrong \code{x} have
      silently been truncated, not detecting previous errors.

      \item Long-standing issue where the X11 device could lose events
      shortly after startup has been addressed \PR{16702}.

      \item \code{rbind.data.frame()} no longer drops \code{<NA>} levels
      from factor columns by default, \PR{17562}.

      \item \code{available.packages()} and hence \code{install.packages()}
      now pass their \code{...} argument to \code{download.file()},
      fulfilling the wish of \PR{17532}; subsequently,
      \code{available.packages()} gets new argument \code{quiet}, solving
      \PR{17573}.

      \item \code{stopifnot()} gets new argument \code{exprObject} to allow
      an \R object of class \code{expression} (or other \sQuote{language})
      to work more consistently, thanks to suggestions by Suharto Anggono.

      \item \code{format.default(*, scientific = FALSE)} now corresponds to
      a practically most extreme \code{options(scipen = n)} setting rather
      than arbitrary \code{n = 100}.

      \item \code{format(as.symbol("foo"))} now works (returning \code{"foo"}).

      \item \code{postscript(.., title = *)} now signals an error when the